clusters/cluster.boem/infra/traefik/ingresses/jipfr.nl.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jipfr.nl
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`adolla-wonder.jipfr.nl`)
      services:
        - kind: Service
          name: jip-vm
          namespace: traefik
          port: 8082
    - kind: Rule
      match: Host(`api-bsl.jipfr.nl`)
      services:
        - kind: Service
          name: jip-vm
          namespace: traefik
          port: 1057
    - kind: Rule
      match: Host(`api-mvlist.jipfr.nl`)
      services:
        - kind: Service
          name: jip-vm
          namespace: traefik
          port: 1055
    - kind: Rule
      match: Host(`push-api.jipfr.nl`)
      services:
        - kind: Service
          name: jip-vm
          namespace: traefik
          port: 1222
    - kind: Rule
      match: Host(`work.jipfr.nl`)
      services:
        - kind: Service
          name: jip-vm
          namespace: traefik
          port: 2188
    - kind: Rule
      match: Host(`lizzy.jipfr.nl`)
      services:
        - kind: Service
          name: jip-vm
          namespace: traefik
          port: 8081
  tls:
    secretName: jipfr.nl-prod-tls
