clusters/cluster.boem/infra/traefik/ingresses/maishond.nl.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maishond.nl
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`media.maishond.nl`)
      services:
        - kind: Service
          name: media-stingalleman-nl
          namespace: traefik
          port: 8096

    - kind: Rule
      match: Host(`request.maishond.nl`)
      services:
        - kind: Service
          name: media-stingalleman-nl
          namespace: traefik
          port: 5055

    - kind: Rule
      match: Host(`leuk-achtergrondje.maishond.nl`)
      services:
        - kind: Service
          name: achtergrondje
          namespace: default
          port: 80

    - kind: Rule
      match: Host(`aap.maishond.nl`)
      services:
        - kind: Service
          name: rhel-aap
          namespace: traefik
          port: 443
          scheme: https
          serversTransport: insecure

    - kind: Rule
      match: Host(`monkey.maishond.nl`)
      services:
        - kind: Service
          name: rhel-aap
          namespace: traefik
          port: 443
          scheme: https
          serversTransport: insecure
      middlewares:
        - name: monkey-redirect
          namespace: traefik

    - kind: Rule
      match: Host(`meet.maishond.nl`)
      services:
        - kind: Service
          name: jitsi-jitsi-meet-web
          namespace: jitsi
          port: 80

    - kind: Rule
      match: Host(`meet.maishond.nl`) && PathPrefix(`/xmpp-websocket`)
      services:
        - kind: Service
          name: jitsi-jitsi-meet-web
          namespace: jitsi
          port: 80

  # location /xmpp-websocket {
  #     proxy_pass http://localhost:8000/xmpp-websocket;
  #     proxy_http_version 1.1;
  #     proxy_set_header Upgrade $http_upgrade;
  #     proxy_set_header Connection "upgrade";
  # }
  tls:
    secretName: maishond.nl-prod-tls
