clusters/cluster.boem/infra/traefik/ingresses/powerproductions.nl.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: powerproductions.nl
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`powerproductions.nl`) || Host(`www.powerproductions.nl`)
      services:
        - kind: Service
          name: wordpress
          namespace: default
          port: 80

    - kind: Rule
      match: Host(`dwrg.nl`) || Host(`www.dwrg.nl`)
      services:
        - kind: Service
          name: wordpress-dwrg
          namespace: default
          port: 80

  tls:
    secretName: powerproductions.nl-prod-tls
