clusters/cluster.boem/infra/traefik/ingresses/stingalleman.nl.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stingalleman.nl
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`stingalleman.nl`)
      services:
        - kind: Service
          name: sting-site
          namespace: default
          port: 80
      middlewares:
        - name: hsts
          namespace: traefik

    - kind: Rule
      match: Host(`media.stingalleman.nl`)
      services:
        - kind: Service
          name: jellyfin
          namespace: media
          port: http

    - kind: Rule
      match: Host(`request.stingalleman.nl`)
      services:
        - kind: Service
          name: jellyseerr
          namespace: media
          port: http

    - kind: Rule
      match: Host(`irc.stingalleman.nl`)
      services:
        - kind: Service
          name: thelounge-http
          namespace: default
          port: 9000

    - kind: Rule
      match: Host(`staging-irc.stingalleman.nl`)
      services:
        - kind: Service
          name: thelounge-staging-http
          namespace: default
          port: 9000

    - kind: Rule
      match: Host(`harbor.stingalleman.nl`)
      services:
        - kind: Service
          name: harbor
          namespace: harbor
          port: 80

    - kind: Rule
      match: Host(`home.stingalleman.nl`)
      services:
        - kind: Service
          name: home-stingalleman-nl
          namespace: traefik
          port: 8123

    - kind: Rule
      match: Host(`books.stingalleman.nl`)
      services:
        - kind: Service
          name: calibre-web-automated
          namespace: media
          port: http

    # - kind: Rule
    #   match: Host(`request.books.stingalleman.nl`)
    #   services:
    #     - kind: Service
    #       name: calibre-web-automated-downloader
    #       namespace: media
    #       port: http

    - kind: Rule
      match: Host(`bookmarks.stingalleman.nl`)
      services:
        - kind: Service
          name: readeck
          namespace: default
          port: http

    - kind: Rule
      match: Host(`grocy.home.stingalleman.nl`)
      services:
        - kind: Service
          name: grocy
          namespace: grocy
          port: http

    - kind: Rule
      match: Host(`grocy-staging.home.stingalleman.nl`)
      services:
        - kind: Service
          name: grocy-staging
          namespace: grocy
          port: http

    - kind: Rule
      match: Host(`foto.stingalleman.nl`)
      services:
        - kind: Service
          name: immich-server
          namespace: immich
          port: 2283

    - kind: Rule
      match: Host(`vroem.stingalleman.nl`)
      services:
        - kind: Service
          name: mediamtx
          namespace: default
          port: http

  tls:
    secretName: stingalleman.nl-prod-tls
